tests/test_files/errors/fuzz14.over

N: [[2]]
M: N+[]
M2: M+M
O: [[] [[2]]]
P: O+O
g: [
  N+[[] N+[]]
]
